--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Automatic : Main code for automatic detection of meteors in the night sky.
 
-Tracker : Function to track the meteor across frames
+Tracker : Class, functions to track the meteor across frames
 
 Manual Click positions : Manual meteor tracking by clicking on the meteor positions 
 
